# Zugzwang

./: .env.example  .gitignore  FRONTEND_MIGRATION_ROADMAP.md  PR_DRAFT_FRONTEND_M1_M4.md  PR_FINAL_FRONTEND_M1_M9.md  README.md  README.pt-br.md  ROADMAP_STATUS.md  pyproject.toml
configs/: defaults.yaml
configs/ablations/: context_board_format_ascii.yaml  context_board_format_combined.yaml  context_board_format_fen.yaml  context_board_format_pgn.yaml  context_board_format_unicode.yaml  context_history_off.yaml  context_history_on.yaml  context_history_plies_12.yaml  context_history_plies_4.yaml  context_legal_moves_off.yaml  context_legal_moves_on.yaml  few_shot_calibration.yaml  instruction_following_isolation.yaml  moa_capability.yaml  moa_hybrid_phase.yaml  moa_single_agent_control.yaml  moa_specialist.yaml  prompt_bare_minimum.yaml  prompt_checklist_strict.yaml  prompt_grandmaster_persona.yaml  prompt_self_critique.yaml  prompt_structured_analysis.yaml  protocol_agentic_compat.yaml  protocol_direct.yaml  protocol_research_strict.yaml  rag_off.yaml  rag_openings_only.yaml  rag_openings_tactics.yaml  rag_variants.yaml  replication_minimal.yaml  transferability_moa_role_overrides_template.yaml  transferability_moa_template.yaml  transferability_single_agent_template.yaml
configs/baselines/: benchmark_compat.yaml  best_known_start.yaml  best_known_start_zai_glm5.yaml  llm_mirror.yaml  (+5 more)
tools/: generate_results_index.py
zugzwang/: __init__.py  cli.py
zugzwang-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+248 files in other folders)
